--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -50,7 +50,7 @@
         "outputId": "e20fa60d-c54c-4bdc-90b0-f2159d184381"
       },
       "id": "fmk0fhT_XyPS",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
         "id": "LCmqh9VqXbda"
       },
       "id": "LCmqh9VqXbda",
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "outputId": "396171d5-32c9-4e40-ca00-e35fa4cbad1a"
       },
       "id": "TX9pniFLYBj_",
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,7 +603,7 @@
         "outputId": "491d9018-5526-461b-9980-e820eed46906"
       },
       "id": "g_FtchXkZ0Zz",
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -922,7 +922,7 @@
         "outputId": "67981733-db2b-48fc-b310-ad6c4433fd7b"
       },
       "id": "GaBounOobdAi",
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +960,7 @@
         "outputId": "e7a4f0db-0640-480f-f43c-30525a1e7216"
       },
       "id": "aaTze51KeAci",
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +998,7 @@
         "outputId": "f3029c5e-30e3-4fba-c8ca-75d6324dd65c"
       },
       "id": "WwrdmnpLzpqF",
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1035,7 +1035,7 @@
         "outputId": "150c4c74-17d9-4e6f-f241-d41fd3e818b1"
       },
       "id": "i5k8yCMNz80V",
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1087,7 +1087,7 @@
         "outputId": "7267dc82-2b91-4af2-c6c8-2fca80689300"
       },
       "id": "JESJ-ASZ0VU9",
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1128,7 +1128,7 @@
         "outputId": "ba19cb17-91cf-45e2-a78d-0419f2e3dee9"
       },
       "id": "5UiIml7d3GKV",
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1179,7 +1179,7 @@
         "outputId": "26c7a3f9-f156-4dd6-e395-fafc271851fa"
       },
       "id": "WFWCHXK249R0",
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1503,7 +1503,7 @@
         "outputId": "5a276b63-12d9-47fd-b78f-0fb9e0403592"
       },
       "id": "eYpvsIBy5SCZ",
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1848,7 +1848,7 @@
         "id": "M8FcvZdZ6dy3"
       },
       "id": "M8FcvZdZ6dy3",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1868,7 +1868,7 @@
         "outputId": "737751f4-3cc5-4ee4-90a3-9327da77dad5"
       },
       "id": "fwCwXnLH6suF",
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1926,7 +1926,7 @@
         "outputId": "90e57cb2-db00-4ac4-9836-2dd020c74c4a"
       },
       "id": "s1G9ltD77OsI",
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1967,7 +1967,7 @@
         "outputId": "ace5e616-81ac-4969-dd20-4fef4b60ce96"
       },
       "id": "yWci96537WhV",
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2008,7 +2008,7 @@
         "outputId": "61b6b85d-a8c8-47ec-af44-27c7268247c3"
       },
       "id": "saWLgvYa7flB",
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2049,7 +2049,7 @@
         "outputId": "b9c1548e-772a-4b2f-c833-1ac51ae19399"
       },
       "id": "NWSPydTE9BKQ",
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2392,7 +2392,7 @@
         "outputId": "6e4cb992-1d2f-4fa6-e1cc-85940c598ac9"
       },
       "id": "iD-N22co9GC5",
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2729,7 +2729,7 @@
         "outputId": "e8ccb70a-b740-4fb1-ff3f-c774aad50fe5"
       },
       "id": "0NWyMHDf9Q3d",
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2777,7 +2777,7 @@
         "outputId": "bdd87154-0700-4591-ce8b-84463e5bcca7"
       },
       "id": "p4mKA-zi9qg_",
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2815,7 +2815,7 @@
         "outputId": "46096dad-8f45-4733-9edc-b30bdea560e2"
       },
       "id": "r8k0C5mBBagE",
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2964,37 +2964,53 @@
     {
       "cell_type": "code",
       "source": [
+        "import numpy as np\n",
         "import pandas as pd  # Import the pandas package into your workspace\n",
         "import seaborn as sns # import seaborn\n",
-        "med_df = pd.read_csv('/content/visualization/assignment/data/puf2021_1_fall.csv',low_memory=False) # load csv"
+        "med_df = pd.read_csv('/content/visualization/assignment/data/puf2021_1_fall.csv',low_memory=False) # load csv\n",
+        "\n",
+        "# rename variables\n",
+        "# change numeric to strings if applicable\n",
+        "# remove missing values\n",
+        "# add the string names if applicable"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 339
-        },
-        "id": "TNqWlQTGRoLA",
-        "outputId": "08963917-600d-44e1-8895-f24a780f766e"
+        "id": "TNqWlQTGRoLA"
       },
       "id": "TNqWlQTGRoLA",
-      "execution_count": 3,
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "med_df = med_df.rename(columns = {'ADM_H_MEDSTA':'medicare_status',\n",
+        "                    'ADM_OP_MDCD':'dual_eligibility',\n",
+        "                    'ADM_LIS_FLAG_YR':'income_subsidy'}) # renaming chosen variables to more understandable names\n",
+        "print(med_df.loc[0:5,('medicare_status','dual_eligibility', 'income_subsidy')],'\\n') # printing first 6 rows of chosen variables"
+      ],
+      "metadata": {
+        "id": "u10IE92yR1DM",
+        "outputId": "6a70b129-67a1-4bd7-d944-f0ca721c1132",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "u10IE92yR1DM",
+      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "[Errno 2] No such file or directory: '/content/visualization/assignment/data/puf2021_1_fall.csv'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-d6dd52e9d18e>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mpd\u001b[0m  \u001b[0;31m# Import the pandas package into your workspace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mseaborn\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0msns\u001b[0m \u001b[0;31m# import seaborn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmed_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/visualization/assignment/data/puf2021_1_fall.csv'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlow_memory\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# load csv\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    209\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    210\u001b[0m                     \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnew_arg_name\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnew_arg_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 211\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    212\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    213\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mcast\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mF\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwrapper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/util/_decorators.py\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    329\u001b[0m                     \u001b[0mstacklevel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfind_stack_level\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    330\u001b[0m                 )\n\u001b[0;32m--> 331\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    332\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    333\u001b[0m         \u001b[0;31m# error: \"Callable[[VarArg(Any), KwArg(Any)], Any]\" has no\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36mread_csv\u001b[0;34m(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, encoding_errors, dialect, error_bad_lines, warn_bad_lines, on_bad_lines, delim_whitespace, low_memory, memory_map, float_precision, storage_options)\u001b[0m\n\u001b[1;32m    948\u001b[0m     \u001b[0mkwds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwds_defaults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    949\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 950\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    951\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    952\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_read\u001b[0;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[1;32m    603\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    604\u001b[0m     \u001b[0;31m# Create the parser.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 605\u001b[0;31m     \u001b[0mparser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    606\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    607\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mchunksize\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0miterator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[1;32m   1440\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhandles\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mIOHandles\u001b[0m \u001b[0;34m|\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1442\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1443\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1444\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/io/parsers/readers.py\u001b[0m in \u001b[0;36m_make_engine\u001b[0;34m(self, f, engine)\u001b[0m\n\u001b[1;32m   1733\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1734\u001b[0m                     \u001b[0mmode\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m\"b\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1735\u001b[0;31m             self.handles = get_handle(\n\u001b[0m\u001b[1;32m   1736\u001b[0m                 \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1737\u001b[0m                 \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/pandas/io/common.py\u001b[0m in \u001b[0;36mget_handle\u001b[0;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[1;32m    854\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;34m\"b\"\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    855\u001b[0m             \u001b[0;31m# Encoding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 856\u001b[0;31m             handle = open(\n\u001b[0m\u001b[1;32m    857\u001b[0m                 \u001b[0mhandle\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0mioargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/visualization/assignment/data/puf2021_1_fall.csv'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   medicare_status  dual_eligibility  income_subsidy\n",
+            "0                1                 1               1\n",
+            "1                1                 1               1\n",
+            "2                1                 1               1\n",
+            "3                1                 1               3\n",
+            "4                1                 2               3\n",
+            "5                1                 1               1 \n",
+            "\n"
           ]
         }
       ]
@@ -3002,16 +3018,70 @@
     {
       "cell_type": "code",
       "source": [
-        "med_df = med_df.rename(columns = {'ADM_H_MEDSTA':'medicare_status',\n",
-        "                    'ADM_OP_MDCD':'dual_eligibility',\n",
-        "                    'ADM_LIS_FLAG_YR':'income_subsidy'})"
+        "status = med_df['medicare_status']\n",
+        "status.unique()\n",
+        "\n",
+        "# First, I am going to change the numbers to the medicare status they each mean.\n",
+        "status = status.replace(1, 'Aged') # replace all 1's in this column to be 'Aged'"
       ],
       "metadata": {
-        "id": "u10IE92yR1DM"
+        "id": "MlJKj_DgXaZ5"
       },
-      "id": "u10IE92yR1DM",
-      "execution_count": 44,
+      "id": "MlJKj_DgXaZ5",
+      "execution_count": 36,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "status = status.replace(2, 'Disabled') # replace all 2's in this column to be 'Disabled'"
+      ],
+      "metadata": {
+        "id": "LWPgfhFpZ5nk"
+      },
+      "id": "LWPgfhFpZ5nk",
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "status = status.replace(3, np.nan) # replace all 2's in this column to be 'Disabled'\n",
+        "\n",
+        "print(status.unique(), '\\n')\n",
+        "status.value_counts()"
+      ],
+      "metadata": {
+        "id": "pjbf3j_ebiHy",
+        "outputId": "0b156230-4537-4929-fa40-6f32672cb5ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "pjbf3j_ebiHy",
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Aged' 'Disabled' nan] \n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Aged        10627\n",
+              "Disabled     2139\n",
+              "Name: medicare_status, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 40
+        }
+      ]
     }
   ],
   "metadata": {
